--- a/requirements_no_builds.yml
+++ b/requirements_no_builds.yml
@@ -107,6 +107,7 @@ dependencies:
       - importlib-metadata==4.11.4
       - jinja2==3.1.2
       - joblib==1.1.0
+      - jupyter
       - keras==2.9.0
       - keras-preprocessing==1.1.2
       - kiwisolver==1.4.3
