--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,8 @@
 name: gaia
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
+  - anaconda
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
